# ktkernel

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  README.md  TODO  Toolchain.cmake  build.sh  config.toml  limine.conf  link.ld  make_root.sh  qemu.sh  shell.nix
.cargo/: config.toml
cmake/: ModuleCompiler.cmake  Toolchain.cmake
kt/kt/: api.h  elf.h  intrin.h  module.h  types.h
ktcore/: cxxabi.cpp  cxxabi.h  symbol.h  systems.h
ktcore/console/: console.cpp  console.h  psf2.h
ktcore/cpu/: gdt.cpp  gdt.h  utilities.cpp  utilities.h
ktcore/devices/qemu/: debug_port.h
ktcore/limine/: limine.h  requests.h
ktcore/mem/: alloc.cpp  alloc.h  kernelstring.cpp  kernelstring.h  memory.cpp  memory.h  string.cpp  string.h  vector.h
ktcore/subsystems/acpi/: rsdp.cpp  rsdp.h
ktcore/subsystems/console/: console.cpp  console.h  format.h  logging.cpp  logging.h  psf2.h  serial.cpp  serial.h
ktcore/subsystems/heap/: slab.cpp  slab.h
ktcore/subsystems/pmm/: pmm.cpp  pmm.h
ktcore/subsystems/vmm/: vmm.cpp  vmm.h
ktkernel/: Cargo.toml  symbol.h  systems.h
ktkernel/core/: entry.cpp  init.cpp  init.h  limine.cpp
ktkernel/interrupts/: exceptionhandler.cpp  handlers.cpp  handlers.h  handlers_BACKUP_84929.cpp  handlers_LOCAL_84929.cpp  interrupts.cpp  interrupts.h  stub.s
ktkernel/limine/: requests.h
ktkernel/mem/: alloc.cpp  alloc.h  kernelstring.cpp  kernelstring.h  memory.h  string.cpp  string.h  vector.h
ktkernel/modules/: core.cpp  loader.cpp  loader.h
ktkernel/src/: crt.rs  gdt.rs  idt.rs  limine.rs  main.rs  test_runner.rs
ktkernel/src/handlers/: int3.rs  mod.rs
ktkernel/src/memory/: heap.rs  mod.rs  pmm.rs  vmm.rs
ktkernel/src/module/: symbol.rs
ktkernel/src/utils/: intrin.rs  log.rs  mod.rs  serial.rs
ktkernel/subsystems/acpi/: rsdp.cpp  rsdp.h
ktkernel/subsystems/console/: console.cpp  console.h  format.h  logging.cpp  logging.h  serial.cpp  serial.h
ktkernel/subsystems/heap/: slab.cpp  slab.h
ktkernel/subsystems/pmm/: pmm.cpp  pmm.h
ktkernel/subsystems/vmm/: vmm.cpp  vmm.h
ktkernel/utilities/: configparser.h  gdt.cpp  gdt.h  tar.h
ktmacros/: Cargo.toml
ktmacros/src/: lib.rs
ktmodule-api/: Cargo.toml
ktmodule-api/src/: lib.rs
limine/: limine
misc/: config.toml  ktmodule.json  limine.conf  link.ld  x86_64.ld
modulec/: Cargo.toml
modulec/src/: main.rs
modules/.cargo/: config.toml
modules/cmos/: Cargo.toml  cmos.cpp
modules/cmos/src/: lib.rs
scripts/: build.sh  make_root.sh  qemu.sh  root.sh
