[package]
name = "ktkernel"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi = "6.1.1"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
limine = "0.6.3"
raw-cpuid = "11.6.0"
spin = "0.10"
volatile = "0.6.1"
x86_64 = "0.15.4"
ktmacros = { path = "../ktmacros" }

[profile.dev]
panic = "abort"
lto = false

[profile.dev.package."*"]
opt-level = 2

[profile.release]
panic = "abort"
opt-level = 2
